--- a/src/app.css
+++ b/src/app.css
@@ -7,33 +7,30 @@
   font-family: "Arial";
 }
 
-html {
-  min-height: 100%;
-}
-
 .App {
-  max-width: 100%;
-
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
   margin: 0rem auto;
   transition: all 0.25s linear 0s;
 }
 .app-content {
   margin-top: 5rem;
+  display: block;
+  height: 100%;
+  min-height: 100%;
+  width: auto;
 }
 @media (max-width: 768px) {
-  .app-content {
-    margin-top: 4rem;
+  .fade-enter {
+    opacity: 0;
+    z-index: 1;
   }
-}
 
-.fade-enter {
-  opacity: 0;
-  z-index: 1;
-}
-
-.fade-enter.fade-enter-active {
-  opacity: 1;
-  transition: opacity 0.3s ease-in;
+  .fade-enter.fade-enter-active {
+    opacity: 1;
+    transition: opacity 0.3s ease-in;
+  }
 }
 @keyframes renderFromLeft {
   0% {
