--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -1,22 +1,24 @@
 main {
-  /* height:100vh; */
-  margin-bottom: 4.5rem;
-  min-height: 100%;
+  /* height: 100vh; */
+  /* margin-bottom: 4.5rem; */
+  /* height: 100%;
+  min-height: 100%; */
   display: flex;
   margin-left: 5%;
 }
+
 .homeContent {
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 40%;
-  height: 22rem;
+  /* height: 22rem; */
   /* animation: renderFromLeft 1s ease forwards; */
 }
 .personal-info {
-  height: 10rem;
-  display: flex;
+  min-height: 100%;
+  /* display: flex; */
   flex-direction: column;
   justify-content: space-evenly;
 }
@@ -49,17 +51,17 @@ main {
   font-size: 2rem;
   font-weight: 600;
 }
-.avatarImage {
+/* .avatarImage {
   margin-top: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   /* animation: renderFromRight 1s ease forwards; */
-}
-.avatarImage img {
+/* } */
+/* .avatarImage img {
   height: 30rem;
   object-fit: cover;
-}
+} */
 .connectText {
   margin-top: 2rem;
   font-size: 1.5rem;
@@ -77,6 +79,7 @@ main {
   .homeContent {
     margin-top: 2rem;
     width: 80%;
+    min-height: 100%;
     /* background-color: aqua; */
   }
   .homeContent h1 {
@@ -87,13 +90,6 @@ main {
   }
   .autoText {
     font-size: 1.5rem;
-  }
-  .avatarImage {
-    margin-top: 2rem;
-  }
-  .avatarImage img {
-    height: 15rem;
-    object-fit: cover;
   }
   .connectText {
     margin-top: 1rem;
